# Taskus

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
bench/: HowToWriteBenchmarks.md  debugTaskFlowImage.cpp  rendermandelbrotsetimage.cpp
docs/: BranchTask.md  FunctionTask.md  QuickStart.md  Task.md
include/: FunctionTask.h  TaskValidator.h  Taskus.h  TaskusBranchTask.h  TaskusDebugUtils.h  TaskusPool.h  TaskusTask.h  TaskusThread.h  ThreadMessage.h
include/functiontaskutils/: functionTaskUtil.h
include/internal_tasks/: InternalTaskManager.h  internalTask.h  internalTaskCache.h  placeholderTask.h  repeatTask.h
src/: TaskPool.cpp  TaskValidator.cpp  Taskus.cpp  TaskusBranchTask.cpp  TaskusDebugUtils.cpp  TaskusTask.cpp  TaskusThread.cpp
src/internal_tasks/: InternalTaskManager.cpp  internalTaskCache.cpp  repeatTask.cpp
tests/: branchtasktest.cpp  functiontasktest.cpp  taskpooltest.cpp  taskvalidatortest.cpp
tests/internal_tasks/: internaltaskcachetest.cpp  internaltaskmanager.cpp
